# ti4-pool-draft

./: CMakeLists.txt  LICENSE  PoolDraftConfig.h.in  README.md  setup.json
cmake/: FindCPPUNIT.cmake
docs/: CMakeLists.txt  Doxyfile.in
example/: setup.json
src/: CMakeLists.txt  main.cpp  randomizer.cpp
